tests-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0273/input.js
class A {set constructor(m){}}
